# dnd-session-notes

./: .gitignore  README.md  release.sh
lambda/: lambda_function.py
lambda/dnd-notes-lambda/: lambda_function.py  pyproject.toml  release.sh
lambda/dnd-notes-lambda/dnd_notes_lambda/: notes.py  utils.py
lambda/dnd-rag-completion-gemini/: lambda_function.py  pyproject.toml  release.sh
lambda/dnd-rag-ingest-gemini/: Dockerfile  lambda_function.py  pyproject.toml  release.sh
lambda/dnd-summary-gemini/: lambda_function.py  pyproject.toml  release.sh
lambda/dnd_rag_answerer/: Dockerfile
lambda/dnd_rag_api/: lambda_function.py  pyproject.toml  release.sh
lambda/dnd_rag_api/dnd_rag_api/: notes.py  utils.py
lambda/dnd_rag_completion/: Dockerfile  lambda_function.py  pyproject.toml
lambda/dnd_rag_ingest/: Dockerfile  lambda_function.py
lambda/dndnotes/: notes.py
s3/: auxiliary.js  index.html  release.sh
session-notes/: generate.sh  release.sh  summary-generate-gemini.py  summary-generate.py  sync-notes.py  transcribe.py
