[project]
name = "dnd_rag_ingest"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.40.74",
    "chromadb>=1.3.4",
    "openai>=2.8.0",
]

[dependency-groups]
dev = [
    "black",
]

[tool.uv]
index-url = "https://pypi.org/simple"


[tool.black]
line-length = 120
